--- a/lesson11/preston.html
+++ b/lesson11/preston.html
@@ -184,29 +184,30 @@
              alt="mountain trail">
       </picture>
       <p>
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras vel ullamcorper lacus. Phasellus justo augue,
-        luctus quis sagittis semper, aliquam et orci. Nulla a ligula elit. Nunc ut sapien justo. Phasellus urna tellus,
-        pretium finibus finibus in, bibendum ac est. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc
-        tempus dui mauris, id sagittis lacus iaculis et. Maecenas turpis arcu, fringilla non libero a, porttitor mollis
-        magna. Curabitur aliquam malesuada tellus in maximus. In sodales felis ipsum, non pretium dui consequat
-        pharetra.
-      </p>
-      <br>
-      <p>
-        Morbi viverra at ex vitae placerat. Sed efficitur lectus vel semper venenatis. Phasellus in placerat justo, at
-        posuere lectus. Nunc ullamcorper dictum magna, a tincidunt tortor viverra eu. Donec nec lobortis lectus, non
-        ornare odio. Phasellus ultrices nisi ac elit lobortis aliquet. In dapibus ullamcorper augue non pharetra.
-      </p>
-      <br>
-      <p>
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi posuere quam eu augue sollicitudin placerat vitae
-        id lacus. Pellentesque sed sapien risus. Suspendisse eros lectus, elementum ut vulputate at, pulvinar vitae
-        nulla. Aliquam ullamcorper nec diam et molestie. Duis auctor vel massa et vulputate. Quisque porta enim
-        venenatis aliquam ullamcorper. Praesent tempus, sem eleifend feugiat tempor, velit diam maximus massa, vel
-        egestas ante odio sed nulla.
+        If you are looking to find new adventures to remember in the Gem State? We have you covered. If you haven’t
+        visited <a href="https://visitidaho.org/">visitidaho.org</a> you’re missing out. This site has maps, a planning
+        guide, food and drink spots, lodging
+        information, tips and tricks, and so much more. Visit Idaho’s site gets four stars from this reporter for
+        accurate
+        information and insightful recommendations.
       </p>
 
     </article>
+  
+    <div>
+      <h3>Winter Survival Kit For Your Vehicle</h3>
+      <figure class="video">
+        <iframe width="560"
+                height="315"
+                src="https://www.youtube.com/embed/0C2e2m-8Gu4"
+                title="YouTube video player"
+                
+                allowfullscreen>
+        </iframe>
+        <figcaption>NOAA: This video provides a quick overview of what to include in your vehicle's winter survival kit.
+        </figcaption>
+      </figure>
+    </div>
 
   </main>
 
@@ -239,14 +240,6 @@
     </div>
 
   </footer>
-  <!-- <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js"></script>
-  <script>
-    WebFont.load({
-      google: {
-        families: ['Montserrat', 'Yaldevi']
-      }
-    });
-  </script> -->
 </body>
 
 </html>
