--- a/lesson11/gallery.html
+++ b/lesson11/gallery.html
@@ -36,9 +36,8 @@
 
   <script defer
           src="js/full-site-js/script.js"></script>
-
   <script defer
-          src="js/gallery-js/script.js"></script>
+          src="js/full-site-js/lazy-loading.js"></script>
 
 
 </head>
