--- a/lesson11/soda-springs.html
+++ b/lesson11/soda-springs.html
@@ -22,8 +22,8 @@
         href="css/full-site-css/small.css">
   <link rel="stylesheet"
         href="css/full-site-css/medium.css">.
-   <link rel="stylesheet"
-         href="css/full-site-css/large.css">
+  <link rel="stylesheet"
+        href="css/full-site-css/large.css">
 
   <link rel="stylesheet"
         href="css/soda-springs-css/small.css">
@@ -31,9 +31,6 @@
         href="css/soda-springs-css/medium.css">
   <link rel="stylesheet"
         href="css/soda-springs-css/large.css">
-        
-  <script defer
-          src="js/full-site-js/script.js"></script>
 
   <script defer
           src="js/soda-springs-js/banner.js"></script>
@@ -41,6 +38,9 @@
           src="js/soda-springs-js/weather-summary.js"></script>
   <script defer
           src="js/soda-springs-js/five-day-forecast.js"></script>
+
+  <script defer
+          src="js/full-site-js/script.js"></script>
   <script defer
           src="js/full-site-js/lazy-loading.js"></script>
 
@@ -179,71 +179,75 @@
     </div>
 
 
-<h3>Myth Busters</h3>
-<div class="picture-container">
-  <picture class="myth-pic">
-    <source media="(max-width: 300px)"
-            srcset="images/soda-springs-images/mb-1-300.jpg">
-    <source media="(max-width: 500px)"
-            srcset="images/soda-springs-images/mb-1-500.jpg">
-    <source media="(min-width: 960px)"
-            srcset="images/soda-springs-images/mb-1-960.jpg">
-    <img src="images/soda-springs-images/placeholder.jpg"
-         data-src="images/soda-springs-images/mb-1-960.jpg"
-         alt="myth: you can't get sunburnt in winder">
-  </picture>
-  <picture class="myth-pic">
-    <source media="(max-width: 300px)"
-            srcset="images/soda-springs-images/mb-2-300.jpg">
-    <source media="(max-width: 500px)"
-            srcset="images/soda-springs-images/mb-2-500.jpg">
-    <source media="(min-width: 960px)"
-            srcset="images/soda-springs-images/mb-2-960.jpg">
-    <img src="images/soda-springs-images/placeholder.jpg"
-         data-src="images/soda-springs-images/mb-2-960.jpg"
-         alt="myth: it can be too cold for snow">
-  </picture>
-  <picture class="myth-pic">
-    <source media="(max-width: 300px)"
-            srcset="images/soda-springs-images/mb-3-300.jpg">
-    <source media="(max-width: 500px)"
-            srcset="images/soda-springs-images/mb-3-500.jpg">
-    <source media="(min-width: 960px)"
-            srcset="images/soda-springs-images/mb-3-960.jpg">
-    <img src="images/soda-springs-images/placeholder.jpg"
-         data-src="images/soda-springs-images/mb-3-960.jpg" alt="myth: if it thunderstorms in winter, it well snow seven days later">
-  </picture>
-  <picture class="myth-pic">
-    <source media="(max-width: 300px)"
-            srcset="images/soda-springs-images/mb-4-300.jpg">
-    <source media="(max-width: 500px)"
-            srcset="images/soda-springs-images/mb-4-500.jpg">
-    <source media="(min-width: 960px)"
-            srcset="images/soda-springs-images/mb-4-960.jpg">
-    <img src="images/soda-springs-images/placeholder.jpg"
-         data-src="images/soda-springs-images/mb-4-960.jpg" alt="myth: going outside in cold weather will make you sick">
-  </picture>
-  <picture class="myth-pic">
-    <source media="(max-width: 300px)"
-            srcset="images/soda-springs-images/mb-5-300.jpg">
-    <source media="(max-width: 500px)"
-            srcset="images/soda-springs-images/mb-5-500.jpg">
-    <source media="(min-width: 960px)"
-            srcset="images/soda-springs-images/mb-5-960.jpg">
-    <img src="images/soda-springs-images/placeholder.jpg"
-         data-src="images/soda-springs-images/mb-5-960.jpg" alt="myth: you should open your windows if a tornado is coming towards your house">
-  </picture>
-  <picture class="myth-pic">
-    <source media="(max-width: 300px)"
-            srcset="images/soda-springs-images/mb-6-300.jpg">
-    <source media="(max-width: 500px)"
-            srcset="images/soda-springs-images/mb-6-500.jpg">
-    <source media="(min-width: 960px)"
-            srcset="images/soda-springs-images/mb-6-960.jpg">
-    <img src="images/soda-springs-images/placeholder.jpg"
-         data-src="images/soda-springs-images/mb-6-960.jpg" alt="myth: water flows in different directions depending on which hemisphere you're in">
-  </picture>
-</div>
+    <h3>Myth Busters</h3>
+    <div class="picture-container">
+      <picture class="myth-pic">
+        <source media="(max-width: 300px)"
+                srcset="images/soda-springs-images/mb-1-300.jpg">
+        <source media="(max-width: 500px)"
+                srcset="images/soda-springs-images/mb-1-500.jpg">
+        <source media="(min-width: 960px)"
+                srcset="images/soda-springs-images/mb-1-960.jpg">
+        <img src="images/soda-springs-images/placeholder.jpg"
+             data-src="images/soda-springs-images/mb-1-960.jpg"
+             alt="myth: you can't get sunburnt in winder">
+      </picture>
+      <picture class="myth-pic">
+        <source media="(max-width: 300px)"
+                srcset="images/soda-springs-images/mb-2-300.jpg">
+        <source media="(max-width: 500px)"
+                srcset="images/soda-springs-images/mb-2-500.jpg">
+        <source media="(min-width: 960px)"
+                srcset="images/soda-springs-images/mb-2-960.jpg">
+        <img src="images/soda-springs-images/placeholder.jpg"
+             data-src="images/soda-springs-images/mb-2-960.jpg"
+             alt="myth: it can be too cold for snow">
+      </picture>
+      <picture class="myth-pic">
+        <source media="(max-width: 300px)"
+                srcset="images/soda-springs-images/mb-3-300.jpg">
+        <source media="(max-width: 500px)"
+                srcset="images/soda-springs-images/mb-3-500.jpg">
+        <source media="(min-width: 960px)"
+                srcset="images/soda-springs-images/mb-3-960.jpg">
+        <img src="images/soda-springs-images/placeholder.jpg"
+             data-src="images/soda-springs-images/mb-3-960.jpg"
+             alt="myth: if it thunderstorms in winter, it well snow seven days later">
+      </picture>
+      <picture class="myth-pic">
+        <source media="(max-width: 300px)"
+                srcset="images/soda-springs-images/mb-4-300.jpg">
+        <source media="(max-width: 500px)"
+                srcset="images/soda-springs-images/mb-4-500.jpg">
+        <source media="(min-width: 960px)"
+                srcset="images/soda-springs-images/mb-4-960.jpg">
+        <img src="images/soda-springs-images/placeholder.jpg"
+             data-src="images/soda-springs-images/mb-4-960.jpg"
+             alt="myth: going outside in cold weather will make you sick">
+      </picture>
+      <picture class="myth-pic">
+        <source media="(max-width: 300px)"
+                srcset="images/soda-springs-images/mb-5-300.jpg">
+        <source media="(max-width: 500px)"
+                srcset="images/soda-springs-images/mb-5-500.jpg">
+        <source media="(min-width: 960px)"
+                srcset="images/soda-springs-images/mb-5-960.jpg">
+        <img src="images/soda-springs-images/placeholder.jpg"
+             data-src="images/soda-springs-images/mb-5-960.jpg"
+             alt="myth: you should open your windows if a tornado is coming towards your house">
+      </picture>
+      <picture class="myth-pic">
+        <source media="(max-width: 300px)"
+                srcset="images/soda-springs-images/mb-6-300.jpg">
+        <source media="(max-width: 500px)"
+                srcset="images/soda-springs-images/mb-6-500.jpg">
+        <source media="(min-width: 960px)"
+                srcset="images/soda-springs-images/mb-6-960.jpg">
+        <img src="images/soda-springs-images/placeholder.jpg"
+             data-src="images/soda-springs-images/mb-6-960.jpg"
+             alt="myth: water flows in different directions depending on which hemisphere you're in">
+      </picture>
+    </div>
 
   </main>
 
@@ -261,7 +265,8 @@
       </div>
       <div class="tel">(208) 235-5390</div>
       <br>
-      <div class="email"><a href="mailto:sunshineforecast@gmail.com">sunshineforecast@gmail.com</a></div>
+      <div class="email"><a href="mailto:sunshineforecast@gmail.com">sunshineforecast@gmail.com</a>
+      </div>
 
     </div>
     <div class="cry-media">
