afternoon update site

--- a/lesson11/fish-haven.html
+++ b/lesson11/fish-haven.html
@@ -25,7 +25,6 @@
   <link rel="stylesheet"
         href="css/full-site-css/large.css">
 
-
   <link rel="stylesheet"
         href="css/fish-haven-css/small.css">
   <link rel="stylesheet"
@@ -33,9 +32,6 @@
   <link rel="stylesheet"
         href="css/fish-haven-css/large.css">
 
-
-  <script defer
-          src="js/fish-haven-js/banner.js"></script>
   <script defer
           src="js/fish-haven-js/weather-summary.js"></script>
   <script defer
@@ -57,13 +53,6 @@
 </head>
 
 <body>
-  <div>
-    <!-- <p class="pancakes">
-      🥞 Saturday, come join us for “Pancakes in the Park”
-      at 9:00 am at Preston Community Park. 😋
-    </p> -->
-
-  </div>
   <header>
 
     <img src="images/full-site-images/sun-weather-icon.png"
@@ -109,11 +98,11 @@
           <span class="ws-title">Currently: &nbsp;</span>
           <span id="current"> </span>
           <span class="ws-title">High: &nbsp;</span>
-          <div><span id="high"> </span>&deg;</div>
+          <div><span id="high"> </span>&deg;F</div>
           <span class="ws-title">Low: &nbsp;</span>
-          <div><span id="low"> </span>&deg;</div>
+          <div><span id="low"> </span>&deg;F</div>
           <span class="ws-title">Wind Chill: &nbsp;</span>
-          <div><span id="wind-chill"> </span>&deg;</div>
+          <div><span id="wind-chill"> </span>&deg;F</div>
           <span class="ws-title">Humidity: &nbsp;</span>
           <div><span id="humid"> </span> %</div>
           <span class="ws-title">Wind Speed: &nbsp;</span>
@@ -131,8 +120,7 @@
              src="images/full-site-images/cloud-with-rain.png"
              alt="rain icon">
         <div><span id="high1"
-                class="wk-h"></span>&deg;&nbsp;&nbsp;<span id="low1"
-                class="wk-l"></span>&deg;</div>
+                class="wk-h"></span>&deg;F</div>
       </div>
 
       <div class="forecast-day">
@@ -142,8 +130,7 @@
              src="images/full-site-images/cloud-with-snow.png"
              alt="snow icon">
         <div><span id="high2"
-                class="wk-h">56</span>&deg;&nbsp;&nbsp;<span id="low2"
-                class="wk-l">32</span>&deg;</div>
+                class="wk-h">56</span>&deg;F</div>
       </div>
 
       <div class="forecast-day">
@@ -153,8 +140,7 @@
              src="images/full-site-images/cloud-with-lightning-and-rain.png"
              alt="storm icon">
         <div><span id="high3"
-                class="wk-h">56</span>&deg;&nbsp;&nbsp;<span id="low3"
-                class="wk-l">32</span>&deg;</div>
+                class="wk-h">56</span>&deg;F</div>
       </div>
 
       <div class="forecast-day">
@@ -164,8 +150,7 @@
              src="images/full-site-images/sun-behind-small-cloud.png"
              alt="cloud icon">
         <div><span id="high4"
-                class="wk-h">56</span>&deg;&nbsp;&nbsp;<span id="low4"
-                class="wk-l">32</span>&deg;</div>
+                class="wk-h">56</span>&deg;F</div>
       </div>
 
       <div class="forecast-day">
@@ -175,8 +160,7 @@
              src="images/full-site-images/sun.png"
              alt="sun icon">
         <div><span id="high5"
-                class="wk-h">56</span>&deg;&nbsp;&nbsp;<span id="low5"
-                class="wk-l">32</span>&deg;</div>
+                class="wk-h">56</span>&deg;F</div>
       </div>
     </div>
 
@@ -189,7 +173,7 @@
                 srcset="images/fish-heaven-images/winter-precipitation-500.jpg">
         <source media="(min-width: 960px)"
                 srcset="images/fish-heaven-images/winter-precipitation-960.jpg">
-        <img src="images/fish-heaven-images/placeholder-960.jpg"
+        <img src="images/fish-heaven-images/placeholder.jpg"
              data-src="images/fish-heaven-images/winter-precipitation-960.jpg"
              alt="winter winter precipitation information">
       </picture>
