--- a/lesson11/index.html
+++ b/lesson11/index.html
@@ -88,34 +88,23 @@
       </picture>
     </div>
 
-
-    <div class="cards">
+    <div class="container"></div>
+    <!-- <div class="townCards">
       <img src="images/home-images/preston-home-400x300.jpg"
            alt="Preston home town">
-      <h2>Preston</h2>
-      <p></p>
-      <p></p>
-      <p></p>
-      <p></p>
+      <div class="town_info"></div>
     </div>
-    <div class="cards">
+    <div class="townCards">
       <img src="images/home-images/fish-haven-home-400x300.jpg"
            alt="Fish Haven home town">
-      <h2>Fish Haven</h2>
-      <p></p>
-      <p></p>
-      <p></p>
-      <p></p>
+     <div class="town_info"></div>
     </div>
-    <div class="cards">
+    <div class="townCards">
       <img src="images/home-images/soda-springs-home-400x300.jpg"
            alt="Soda Springs home town">
-      <h2>Soda Springs</h2>
-      <p></p>
-      <p></p>
-      <p></p>
-      <p></p>
-    </div>
+      <div class="town_info"></div>
+    </div> -->
+    
 
   </main>
 
