--- a/lesson11/soda-springs.html
+++ b/lesson11/soda-springs.html
@@ -33,8 +33,6 @@
         href="css/soda-springs-css/large.css">
 
   <script defer
-          src="js/soda-springs-js/banner.js"></script>
-  <script defer
           src="js/soda-springs-js/weather-summary.js"></script>
   <script defer
           src="js/soda-springs-js/five-day-forecast.js"></script>
@@ -55,13 +53,7 @@
 </head>
 
 <body>
-  <div>
-    <!-- <p class="pancakes">
-      🥞 Saturday, come join us for “Pancakes in the Park”
-      at 9:00 am at Preston Community Park. 😋
-    </p> -->
 
-  </div>
   <header>
 
     <img src="images/full-site-images/sun-weather-icon.png"
@@ -107,11 +99,11 @@
           <span class="ws-title">Currently: &nbsp;</span>
           <span id="current"> </span>
           <span class="ws-title">High: &nbsp;</span>
-          <div><span id="high"> </span>&deg;</div>
+          <div><span id="high"> </span>&deg;F</div>
           <span class="ws-title">Low: &nbsp;</span>
-          <div><span id="low"> </span>&deg;</div>
+          <div><span id="low"> </span>&deg;F</div>
           <span class="ws-title">Wind Chill: &nbsp;</span>
-          <div><span id="wind-chill"> </span>&deg;</div>
+          <div><span id="wind-chill"> </span>&deg;F</div>
           <span class="ws-title">Humidity: &nbsp;</span>
           <div><span id="humid"> </span> %</div>
           <span class="ws-title">Wind Speed: &nbsp;</span>
@@ -129,8 +121,7 @@
              src="images/full-site-images/cloud-with-rain.png"
              alt="rain icon">
         <div><span id="high1"
-                class="wk-h"></span>&deg;&nbsp;&nbsp;<span id="low1"
-                class="wk-l"></span>&deg;</div>
+                class="wk-h"></span>&deg;F</div>
       </div>
 
       <div class="forecast-day">
@@ -140,8 +131,7 @@
              src="images/full-site-images/cloud-with-snow.png"
              alt="snow icon">
         <div><span id="high2"
-                class="wk-h">56</span>&deg;&nbsp;&nbsp;<span id="low2"
-                class="wk-l">32</span>&deg;</div>
+                class="wk-h">56</span>&deg;F</div>
       </div>
 
       <div class="forecast-day">
@@ -151,8 +141,7 @@
              src="images/full-site-images/cloud-with-lightning-and-rain.png"
              alt="storm icon">
         <div><span id="high3"
-                class="wk-h">56</span>&deg;&nbsp;&nbsp;<span id="low3"
-                class="wk-l">32</span>&deg;</div>
+                class="wk-h">56</span>&deg;F</div>
       </div>
 
       <div class="forecast-day">
@@ -162,8 +151,7 @@
              src="images/full-site-images/sun-behind-small-cloud.png"
              alt="cloud icon">
         <div><span id="high4"
-                class="wk-h">56</span>&deg;&nbsp;&nbsp;<span id="low4"
-                class="wk-l">32</span>&deg;</div>
+                class="wk-h">56</span>&deg;F</div>
       </div>
 
       <div class="forecast-day">
@@ -173,8 +161,7 @@
              src="images/full-site-images/sun.png"
              alt="sun icon">
         <div><span id="high5"
-                class="wk-h">56</span>&deg;&nbsp;&nbsp;<span id="low5"
-                class="wk-l">32</span>&deg;</div>
+                class="wk-h">56</span>&deg;F</div>
       </div>
     </div>
 
@@ -247,6 +234,7 @@
              data-src="images/soda-springs-images/mb-6-960.jpg"
              alt="myth: water flows in different directions depending on which hemisphere you're in">
       </picture>
+      <figcaption>* This continent is complements of NOAA website.</figcaption>
     </div>
 
   </main>
