--- a/lesson11/preston.html
+++ b/lesson11/preston.html
@@ -109,11 +109,11 @@
           <span class="ws-title">Currently: &nbsp;</span>
           <span id="current"> </span>
           <span class="ws-title">High: &nbsp;</span>
-          <div><span id="high"> </span>&deg;</div>
+          <div><span id="high"> </span>&deg;F</div>
           <span class="ws-title">Low: &nbsp;</span>
-          <div><span id="low"> </span>&deg;</div>
+          <div><span id="low"> </span>&deg;F</div>
           <span class="ws-title">Wind Chill: &nbsp;</span>
-          <div><span id="wind-chill"> </span>&deg;</div>
+          <div><span id="wind-chill"> </span>&deg;F</div>
           <span class="ws-title">Humidity: &nbsp;</span>
           <div><span id="humid"> </span> %</div>
           <span class="ws-title">Wind Speed: &nbsp;</span>
@@ -131,8 +131,7 @@
              src="images/full-site-images/cloud-with-rain.png"
              alt="rain icon">
         <div><span id="high1"
-                class="wk-h"></span>&deg;&nbsp;&nbsp;<span id="low1"
-                class="wk-l"></span>&deg;</div>
+                class="wk-h"></span>&deg;F</div>
       </div>
 
       <div class="forecast-day">
@@ -142,8 +141,7 @@
              src="images/full-site-images/cloud-with-snow.png"
              alt="snow icon">
         <div><span id="high2"
-                class="wk-h">56</span>&deg;&nbsp;&nbsp;<span id="low2"
-                class="wk-l">32</span>&deg;</div>
+                class="wk-h">56</span>&deg;F</div>
       </div>
 
       <div class="forecast-day">
@@ -153,8 +151,7 @@
              src="images/full-site-images/cloud-with-lightning-and-rain.png"
              alt="storm icon">
         <div><span id="high3"
-                class="wk-h">56</span>&deg;&nbsp;&nbsp;<span id="low3"
-                class="wk-l">32</span>&deg;</div>
+                class="wk-h">56</span>&deg;F</div>
       </div>
 
       <div class="forecast-day">
@@ -164,8 +161,7 @@
              src="images/full-site-images/sun-behind-small-cloud.png"
              alt="cloud icon">
         <div><span id="high4"
-                class="wk-h">56</span>&deg;&nbsp;&nbsp;<span id="low4"
-                class="wk-l">32</span>&deg;</div>
+                class="wk-h">56</span>&deg;F</div>
       </div>
 
       <div class="forecast-day">
@@ -175,8 +171,7 @@
              src="images/full-site-images/sun.png"
              alt="sun icon">
         <div><span id="high5"
-                class="wk-h">56</span>&deg;&nbsp;&nbsp;<span id="low5"
-                class="wk-l">32</span>&deg;</div>
+                class="wk-h">56</span>&deg;F</div>
       </div>
     </div>
 
