finish for the night

--- a/lesson11/fish-haven.html
+++ b/lesson11/fish-haven.html
@@ -36,6 +36,8 @@
           src="js/fish-haven-js/weather-summary.js"></script>
   <script defer
           src="js/fish-haven-js/five-day-forecast.js"></script>
+  <script defer
+          src="js/fish-haven-js/events.js"></script>
 
   <script defer
           src="js/full-site-js/script.js"></script>
@@ -201,10 +203,10 @@
       </li>
     </ul>
 
-
-
-
-
+    <div id="events">
+      <h3 class="underline">Mark Your Calendar</h3>
+      <div class="events">
+    </div>
 
   </main>
 
