--- a/lesson11/preston.html
+++ b/lesson11/preston.html
@@ -35,8 +35,6 @@
   <script defer
           src="js/full-site-js/script.js"></script>
 
-
-
   <script defer
           src="js/preston-js/events.js"></script>
   <script defer
@@ -209,7 +207,7 @@
     </div>
 
     <div id="events">
-      <h3>Mark Your Calendar</h3>
+      <h3 class="underline">Mark Your Calendar</h3>
       <div class="events">
     </div>
     
