--- a/lesson11/soda-springs.html
+++ b/lesson11/soda-springs.html
@@ -36,6 +36,9 @@
           src="js/soda-springs-js/weather-summary.js"></script>
   <script defer
           src="js/soda-springs-js/five-day-forecast.js"></script>
+  <script defer
+          src="js/soda-springs-js/events.js"></script>
+
 
   <script defer
           src="js/full-site-js/script.js"></script>
@@ -235,6 +238,11 @@
              alt="myth: water flows in different directions depending on which hemisphere you're in">
       </picture>
       <figcaption>* This continent is complements of NOAA website.</figcaption>
+    </div>
+
+    <div id="events">
+      <h3 class="underline">Mark Your Calendar</h3>
+      <div class="events">
     </div>
 
   </main>
