soda springs lite

--- a/lesson11/gallery.html
+++ b/lesson11/gallery.html
@@ -83,7 +83,7 @@
       <figure><img src="images/gallery-images/placeholder.jpg"
              data-src="images/gallery-images/w-pic3.jpg"
              alt="Green grass and blue sky.">
-        <figcaption>"Spring Time Dreaming" by Leslie Hope</figcaption>
+        <figcaption>"Spring Dreaming" by Russell Floyd</figcaption>
       </figure>
       <figure><img src="images/gallery-images/placeholder.jpg"
              data-src="images/gallery-images/w-pic4.jpg"
