--- a/lesson11/preston.html
+++ b/lesson11/preston.html
@@ -126,8 +126,8 @@
         <div class="day"
              id="day1"></div>
         <img id="icon1"
-             src="images/full-site-images/cloud-with-rain.png"
-             alt="rain icon">
+             src="#"
+             alt="#">
         <div><span id="high1"
                 class="wk-h"></span>&deg;F</div>
       </div>
@@ -136,8 +136,8 @@
         <div class="day"
              id="day2"></div>
         <img id="icon2"
-             src="images/full-site-images/cloud-with-snow.png"
-             alt="snow icon">
+             src="#"
+             alt="#">
         <div><span id="high2"
                 class="wk-h">56</span>&deg;F</div>
       </div>
@@ -146,8 +146,8 @@
         <div class="day"
              id="day3"></div>
         <img id="icon3"
-             src="images/full-site-images/cloud-with-lightning-and-rain.png"
-             alt="storm icon">
+             src="#"
+             alt="#">
         <div><span id="high3"
                 class="wk-h">56</span>&deg;F</div>
       </div>
@@ -156,8 +156,8 @@
         <div class="day"
              id="day4"></div>
         <img id="icon4"
-             src="images/full-site-images/sun-behind-small-cloud.png"
-             alt="cloud icon">
+             src="#"
+             alt="#">
         <div><span id="high4"
                 class="wk-h">56</span>&deg;F</div>
       </div>
@@ -166,8 +166,8 @@
         <div class="day"
              id="day5"></div>
         <img id="icon5"
-             src="images/full-site-images/sun.png"
-             alt="sun icon">
+             src="#"
+             alt="#">
         <div><span id="high5"
                 class="wk-h">56</span>&deg;F</div>
       </div>
