--- a/lesson11/gallery.html
+++ b/lesson11/gallery.html
@@ -31,7 +31,7 @@
   <link rel="stylesheet"
         href="css/gallery-css/medium.css">
   <link rel="stylesheet"
-        href="css/gallery-css/medium.css">
+        href="css/gallery-css/large.css">
 
 
   <script defer
